# db-ops

./: .gitignore  CHANGELOG.md  Makefile  README.md  dbops.spec  pyproject.toml  release.config.mjs
.github/: CODEOWNERS
.github/workflows/: ci.yml  homebrew-release.yml  pr-title.yml  release-pr.yml  release.yml  semantic-release.yml
scripts/: build-macos.sh  check_conventional_commits.py
src/db_ops/core/: auth.py  banner.py  catalog.py  job_models.py  jobs.py  models.py  runs.py  selector_builder.py  selectors.py
src/db_ops/core/adapters/: databricks.py  databricksjobs.py  unitycatalog.py
src/dbops/: __main__.py
src/dbops/cli/: __init__.py  cli.py  tui.py
src/dbops/cli/commands/: jobs.py  unitycatalog.py
src/dbops/cli/common/: banner.py  context.py  exits.py  options.py  output.py  progress.py  selector_builder.py
src/dbops/core/: auth.py  catalog.py  jobs.py  runs.py  selectors.py  uc.py
src/dbops/core/adapters/: databricksjobs.py  unitycatalog.py
src/dbops_cli/: __main__.py  cli.py  tui.py
src/dbops_cli/commands/: jobs.py  unitycatalog.py
src/dbops_cli/common/: banner.py  context.py  output.py  progress.py  tui_style.py
tests/: conftest.py  test_catalog.py  test_progress.py  test_runs.py  test_selector_builder.py  test_selectors.py  test_tui.py
