[project]
name = "db-ops"
version = "0.1.6"
description = "Databricks operations commandline tool"
requires-python = ">=3.11"

dependencies = [
    "databricks-sdk>=0.30.0",
    "questionary>=2.1.1",
    "typer>=0.20.1",
]

[project.optional-dependencies]
cli = ["typer>=0.12", "rich>=13.7", "questionary>=2.0"]
dev = ["pyinstaller>=6.0"]

[project.scripts]
dbops = "dbops_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/dbops_cli", "src/db_ops"]
