[project]
name = "db-ops"
version = "0.4.3"
description = "Databricks operations commandline tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "DataRow1" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "databricks-sdk>=0.30.0",
    "questionary>=2.1.1",
    "rich>=13.7",
    "typer>=0.20.1",
]

[project.urls]
Homepage = "https://github.com/DataRow1/brick-ops"
Repository = "https://github.com/DataRow1/brick-ops"

[project.optional-dependencies]
cli = ["typer>=0.20.1", "rich>=13.7", "questionary>=2.1.1"]
dev = ["pyinstaller>=6.0"]

[project.scripts]
dbops = "dbops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff", "pytest", "pre-commit"]

[tool.hatch.build.targets.wheel]
packages = ["src/dbops"]

[tool.semantic_release]
tag_format = "{version}"
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "^main$"

[tool.semantic_release.branches.release_pr]
match = "^(?!main$).+"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "perf",
    "refactor",
    "docs",
    "chore",
    "build",
    "ci",
    "test",
    "style",
    "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
